:wrench: chore(translucent): Fixed missing background color for header on main page

--- a/res/app.css
+++ b/res/app.css
@@ -49,7 +49,7 @@ html {
 }
 
 .translucent {
-    background: rgba(0, 0, 0, 0.87);
+    background: rgba(0, 0, 0, 0.87) !important;
 }
 
 .header-clear-mod a {
